--- a/action.yml
+++ b/action.yml
@@ -14,6 +14,8 @@ inputs:
     description: 'You can set some reactions on your comments through the `reactions` input.'
   pr_number:
     description: 'Manual pull request number'
+  repo:
+    description: 'Repository name'
   comment_includes:
     description: 'The text that should be used to find comment in case of replacement.'
 runs:
